--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "ip": "^2.0.1",
-    "onebusaway-sdk": "^1.10.11"
+    "onebusaway-sdk": "^1.10.11",
+    "qrcode": "^1.5.4"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
-    "@types/ip": "^1.1.3"
+    "@types/ip": "^1.1.3",
+    "@types/qrcode": "^1.5.6",
+    "nodemon": "^3.1.11"
   }
 }
