--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/express": "^5.0.5",
     "@types/ip": "^1.1.3",
     "@types/qrcode": "^1.5.6",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "typescript": "^5.9.3"
   }
 }
