--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "test": "npm run build && node --enable-source-maps ."
   },
   "dependencies": {
+    "chalk": "^5.6.2",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "figlet": "^1.9.4",
     "ip": "^2.0.1",
     "onebusaway-sdk": "^1.10.11",
-    "qrcode": "^1.5.4"
+    "qrcode": "^1.5.4",
+    "widest-line": "^5.0.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
